--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  gson: ^0.1.4
   shared_preferences: ^0.5.12+4
-  type_token: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  integration_test:
-    sdk: flutter
+  #integration_test:
+   # sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
