--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^0.5.12+4
   flutter_svg: ^0.19.3
+  page_view_indicators: ^2.0.0
 
 dev_dependencies:
   flutter_test:
