--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  json_annotation: ^3.0.1
   shared_preferences: ^0.5.12+4
   flutter_svg: ^0.19.3
   page_view_indicators: ^2.0.0
+  flutter_slidable: ^0.5.7
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
+  build_runner: ^1.0.0
+  json_serializable: ^3.3.0
   flutter_test:
     sdk: flutter
   #integration_test:
